--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ru-RU">
-        <head><!-- Created by Artisteer v4.3.0.60745 -->
+    <head><!-- Created by Artisteer v4.3.0.60745 -->
         <meta charset="utf-8">
         <title>Генератор</title>
         <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
@@ -10,7 +10,7 @@
         <!--[if lte IE 7]><link rel="stylesheet" href="style.ie7.css" media="screen" /><![endif]-->
         <link rel="stylesheet" href="style.responsive.css" media="all">
 
-
+        <script src="main.js" type="text/javascript"></script>
         <script src="jquery.js"></script>
         <script src="script.js"></script>
         <script src="script.responsive.js"></script>
@@ -41,9 +41,23 @@
                         <div class="art-content-layout-row">
                             <div class="art-layout-cell art-sidebar1"><div class="art-block clearfix">
                                     <div class="art-blockheader">
-                                        <h3 class="t">Контакты</h3>
+                                        <h3 class="t">Меню</h3>
+
                                     </div>
-                                    <div class="art-blockcontent"><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p></div>
+                                    <div class="art-blockcontent">
+                                        <form name="typeGenForm">
+                                            <table >
+                                                <tr>
+                                                    <td><input type="radio" id="typeGen1" name="typeGen" onclick="handleClick(this);" value="1"></td>
+                                                    <td><label for="typeGen1">All Win</label><br></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><input type="radio" id="typeGen2" name="typeGen" onclick="handleClick(this);" value="2"></td>
+                                                    <td><label for="typeGen2">One Win</label><br></td>
+                                                </tr>
+                                            </table>       
+                                        </form>
+                                    </div>
                                 </div></div>
                             <div class="art-layout-cell art-content"><article class="art-post art-article">
 
@@ -51,7 +65,7 @@
                                     <div class="art-postcontent art-postcontent-0 clearfix"><div class="art-content-layout layout-item-0">
                                             <div class="art-content-layout-row">
                                                 <div class="art-layout-cell layout-item-1" style="width: 100%" >
-                                                    <br><br>Контент<br><br><br><br><br><br>
+                                                    <div id="tableMendel">йййййййййййййй</div>
                                                 </div>
                                             </div>
                                         </div>
