all wins Готово

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <h1 class="art-headline">
-                    <a href="/">Bano4ka.dp.ua</a>
+                    <a href="/">Bano4ka.dp</a>
                 </h1>
                 <h2 class="art-slogan">Розыгрыши призов:</h2>
             </header>
@@ -65,7 +65,7 @@
                                     <div class="art-postcontent art-postcontent-0 clearfix"><div class="art-content-layout layout-item-0">
                                             <div class="art-content-layout-row">
                                                 <div class="art-layout-cell layout-item-1" style="width: 100%" >
-                                                    <div id="tableMendel">йййййййййййййй</div>
+                                                    <div id="divConteiner"></div>
                                                 </div>
                                             </div>
                                         </div>
