--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="ru-RU">
-    <head><!-- Created by Artisteer v4.3.0.60745 -->
+<html dir="ltr" lang="en-US"><head><!-- Created by Artisteer v4.3.0.60745 -->
         <meta charset="utf-8">
-        <title>Генератор</title>
+        <title>Новая страница</title>
         <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
 
         <!--[if lt IE 9]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -10,15 +9,17 @@
         <!--[if lte IE 7]><link rel="stylesheet" href="style.ie7.css" media="screen" /><![endif]-->
         <link rel="stylesheet" href="style.responsive.css" media="all">
 
-        <script src="main.js" type="text/javascript"></script>
+
+        <script src="main.js"></script>
         <script src="jquery.js"></script>
         <script src="script.js"></script>
         <script src="script.responsive.js"></script>
+        <meta name="description" content="Description">
+        <meta name="keywords" content="Keywords">
 
 
 
-        <style>.art-content .art-postcontent-0 .layout-item-0 { border-spacing: 5px 0px; border-collapse: separate;  }
-            .art-content .art-postcontent-0 .layout-item-1 { padding-right: 10px;padding-left: 10px;  }
+        <style>.art-content .art-postcontent-0 .layout-item-0 { border-spacing: 3px 0px; border-collapse: separate;  }
             .ie7 .art-post .art-layout-cell {border:none !important; padding:0 !important; }
             .ie6 .art-post .art-layout-cell {border:none !important; padding:0 !important; }
 
@@ -26,23 +27,48 @@
     <body>
         <div id="art-main">
             <header class="art-header">
+
                 <div class="art-shapes">
-                    <div class="art-object0"></div>
+
                 </div>
 
                 <h1 class="art-headline">
-                    <a href="/">Bano4ka.dp</a>
+                    <a href="/">@Bano4ka.dp</a>
                 </h1>
-                <h2 class="art-slogan">Розыгрыши призов:</h2>
+                <h2 class="art-slogan">Баночка в Подарок</h2>
+
+
+
+
+
+
+
             </header>
+            <nav class="art-nav">
+                <ul class="art-hmenu"><li><a href="index.html" class="active">Home</a></li></ul> 
+            </nav>
             <div class="art-sheet clearfix">
                 <div class="art-layout-wrapper">
                     <div class="art-content-layout">
                         <div class="art-content-layout-row">
+                            <div class="art-layout-cell art-content"><article class="art-post art-article">
+
+
+                                    <div class="art-postcontent art-postcontent-0 clearfix"><div class="art-content-layout layout-item-0">
+                                            <div class="art-content-layout-row">
+                                                <div class="art-layout-cell" style="width: 100%" >
+                                                    <div id="divConteiner"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+                                </article></div>
                             <div class="art-layout-cell art-sidebar1"><div class="art-block clearfix">
                                     <div class="art-blockheader">
-                                        <h3 class="t">Меню</h3>
-
+                                        <h3 class="t">Тип розыгрыша:</h3>
                                     </div>
                                     <div class="art-blockcontent">
                                         <form name="typeGenForm">
@@ -59,31 +85,13 @@
                                         </form>
                                     </div>
                                 </div></div>
-                            <div class="art-layout-cell art-content"><article class="art-post art-article">
-
-
-                                    <div class="art-postcontent art-postcontent-0 clearfix"><div class="art-content-layout layout-item-0">
-                                            <div class="art-content-layout-row">
-                                                <div class="art-layout-cell layout-item-1" style="width: 100%" >
-                                                    <div id="divConteiner"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-
-                                </article></div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <footer class="art-footer">
-                <div class="art-footer-inner">
+                </div><footer class="art-footer">
                     <p>bano4ka.dp.ua | Авторское право © 2019. Все Права Защищены.</p><p><br></p>
-                </div>
-            </footer>
+                </footer>
 
+            </div>
         </div>
 
 
