--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
             </header>
             <nav class="art-nav">                
-                 <button class="btn btn-primary navbar-btn " onclick="handleClick(this);" value="1">All Win</button>          
-                 <button class="btn btn-primary navbar-btn" onclick="handleClick(this);" value="2">One Win</button>          
+                 <button class="btn btn-dark navbar-btn " onclick="handleClick(this);" value="1">All Win</button>          
+                 <button class="btn btn-dark navbar-btn" onclick="handleClick(this);" value="2">One Win</button>          
                  
             </nav>
             <div class="art-sheet clearfix">
