Реализовал вывод сообщений и тайтл. Заполнение бд)

--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
         <script src="main.js"></script>
         <script src="jquery.js"></script>
         <script src="script.js"></script>
-        <script src="script.responsive.js"></script>
+
         <meta name="description" content="Description">
         <meta name="keywords" content="Keywords">
 
 
 
-        <style>.art-content .art-postcontent-0 .layout-item-0 { border-spacing: 3px 0px; border-collapse: separate;  }
-            .ie7 .art-post .art-layout-cell {border:none !important; padding:0 !important; }
-            .ie6 .art-post .art-layout-cell {border:none !important; padding:0 !important; }
+        <style>
+            #divTitle, #divMassage {
+                text-align: center;
+            }
             .leftsidebar {
                 float: left;
-                width: 200px;
+                width: 250px;
                 margin-top: 50px;
             }
 
@@ -63,19 +64,19 @@
             </nav>
             <div class="art-sheet clearfix">
                 <div class="art-layout-wrapper" style="width: 100%">   
-                    <div class="art-layout-cell art-content">
-                        <div class="art-layout-cell" style="width: 100%" >
-                            <div id="divConteiner">    
-                                
-                                <div>Ошибки</div>
-                                <div>заглав</div>
-                                <div id="prizeDiv" class="leftsidebar"></div>
-                                <div id="membersDiv" class="content"></div>
-                                <div id="resultDiv" class="right"></div>
-                                <div id="resultDiv" class="clearer"></div>
-                            </div>                                                    
-                        </div>
-                    </div>
+                    <div id="divMassage"></div>
+                    <div id="divConteiner">
+                        <div id="divTitle"></div>
+                        <div id="prizeDiv" class="leftsidebar"></div>
+                        <div id="membersDiv" class="content"></div>
+                        <div id="resultDiv" class="right"></div>
+                        <div id="resultDiv" class="clearer"></div>
+                    </div>     
+                    <!--                <div class="art-layout-cell art-content">
+                                        <div class="art-layout-cell" style="width: 100%" >
+                                                               
+                                        </div>
+                                    </div>-->
                 </div>
                 <footer class="art-footer">
                     <p>bano4ka.dp | Авторское право © 2019. Все Права Защищены.</p><p><br></p>
