Остались мелкие замечания

--- a/index.html
+++ b/index.html
@@ -24,28 +24,36 @@
         <style>
             #divTitle, #divMassage {
                 text-align: center;
+                margin-bottom: 10px;
             }
+            ul>a {
+                font-weight:bold;
+            }
+            li>input {
+                margin-left: 7px;
+            }
+
             .leftsidebar {
                 float: left;
-                width: 250px;
-                margin-top: 50px;
+                width: 270px;
+                margin-top: 25px;
             }
 
             .content {
                 float: left;
-                width: 300px;
-                margin-top: 50px;
+                width: 270px;
+                margin-top: 25px;
             }
 
             .right {
                 float:left;
-                width: 300px;
-                margin-top: 50px;
+                width: 325px;
+                margin-top: 25px;
             }
 
             .clearer {
                 clear: both;
-                margin-top: 50px;
+                margin-top: 25px;
             }
 
         </style></head>
@@ -54,7 +62,7 @@
             <header class="art-header">
                 <div class="art-shapes"></div>
                 <h1 class="art-headline">
-                    <a href="/">@Bano4ka.dp</a>
+                    <a href="https://www.instagram.com/bano4ka.dp/" target="_blank">@Bano4ka.dp</a>
                 </h1>
                 <h2 class="art-slogan">Баночка в Подарок</h2>
             </header>
@@ -64,22 +72,21 @@
             </nav>
             <div class="art-sheet clearfix">
                 <div class="art-layout-wrapper" style="width: 100%">   
-                    <div id="divMassage"></div>
+                    <div id="divMassage">  </div>
                     <div id="divConteiner">
-                        <div id="divTitle"></div>
+                        <div id="divTitle">
+                            <p>Чтобы выиграть в лотерее нужно иметь не только удачу, но и лотерейный билет.</br></p>
+                            <p>Сервис для розыгрыша лотереи. Создан для проекта <a href="https://www.instagram.com/bano4ka.dp/" target="_blank">@Bano4ka.dp</a>, но и Вы можете им воспользоватся.</p>
+                        </div>
                         <div id="prizeDiv" class="leftsidebar"></div>
                         <div id="membersDiv" class="content"></div>
                         <div id="resultDiv" class="right"></div>
                         <div id="resultDiv" class="clearer"></div>
                     </div>     
-                    <!--                <div class="art-layout-cell art-content">
-                                        <div class="art-layout-cell" style="width: 100%" >
-                                                               
-                                        </div>
-                                    </div>-->
+
                 </div>
                 <footer class="art-footer">
-                    <p>bano4ka.dp | Авторское право © 2019. Все Права Защищены.</p><p><br></p>
+                    <p><a href="https://www.instagram.com/bano4ka.dp/" target="_blank">@Bano4ka.dp</a> | Авторское право © 2019. Все Права Защищены.</p><p><br></p>
                 </footer>
             </div>
         </div>
